--- a/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
+++ b/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
@@ -3,7 +3,7 @@
         <lightning-card title="Memory Game">
             <div class="slds-var-p-around_medium">
                 <section class="score-panel">
-                    <span class="moves">1</span> Moves(s)
+                    <span class="moves">{moves}</span> Moves(s)
                     <div class="timer">10 seconds</div>
                     <div class="restart">
                         <i class="fa fa-repeat" aria-hidden="true"></i>
