added timer logic

--- a/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
+++ b/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
@@ -4,7 +4,7 @@
             <div class="slds-var-p-around_medium">
                 <section class="score-panel">
                     <span class="moves">{moves}</span> Moves(s)
-                    <div class="timer">10 seconds</div>
+                    <div class="timer">{totalTime}</div>
                     <div class="restart">
                         <i class="fa fa-repeat" aria-hidden="true"></i>
                     </div>
