added more logic

--- a/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
+++ b/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
@@ -5,7 +5,7 @@
                 <section class="score-panel">
                     <span class="moves">{moves}</span> Moves(s)
                     <div class="timer">{totalTime}</div>
-                    <div class="restart">
+                    <div class="restart" onclick={shuffle}>
                         <i class="fa fa-repeat" aria-hidden="true"></i>
                     </div>
                 </section>
