--- a/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
+++ b/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
@@ -20,7 +20,7 @@
                     </ul>
 
                     <template if:true={showCongratulations}>
-                        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+                        <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open slds-m-around_medium">
                             <div class="slds-modal__container">
                             <header class="slds-modal__header">
                                 <h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Hurray!!! you're a winner 🎉 🎉
