--- a/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
+++ b/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
@@ -27,15 +27,18 @@
                                 </h2>
                             </header>
                             <div class="slds-modal__content slds-p-around_medium slds-text-heading_medium" id="modal-content-id-1">
-                                <p class="slds-text-color_success">You made <strong>{moves}</strong> moves in {totalTime}</p>
-                                <div class="slds-m-buttom_medium"></div>
-                                <p>Your rating: 
-                                    <template for:each={gameRating} for:item="rating">
-                                        <i class="fa fa-star" key={rating}></i>
-                                    </template>
-                                </p>
+                                <div class="slds-m-around_medium">
+                                    <p class="slds-text-color_success">You made <strong>{moves}</strong> moves in {totalTime}</p>
+                                </div>
+                                <div class="slds-m-around_medium">
+                                    <p>Your rating: 
+                                        <template for:each={gameRating} for:item="rating">
+                                            <i class="fa fa-star" key={rating}></i>
+                                        </template>
+                                    </p>
+                                </div>                               
                             </div>
-                            <footer class="slds-modal__footer">
+                            <footer class="slds-modal__footer slds-m-around_medium ">
                             <button class="slds-button slds-button_brand" onclick={shuffle}>Play Again</button>
                             </footer>
                             </div>
