--- a/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
+++ b/force-app/main/default/lwc/memoryGameLwc/memoryGameLwc.html
@@ -21,7 +21,7 @@
                     <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
                         <div class="slds-modal__container">
                         <header class="slds-modal__header">
-                            <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Hurray!! you're a winner 🎉 🎉
+                            <h1 id="modal-heading-01" class="slds-modal__title slds-hyphenate header-text">Hurray!! you're a winner 🎉 🎉
                             </h1>
                         </header>
                         
