added search component

--- a/force-app/main/default/lwc/movieListApp/movieListApp.html
+++ b/force-app/main/default/lwc/movieListApp/movieListApp.html
@@ -1,13 +1,13 @@
 <template>
         <lightning-card>
             <div class="slds-p-around_medium">
-                <!-- <div class="slds-p-around_medium">
+                <div class="slds-p-around_medium">
                     <lightning-input type="search"
                     onchange={fetchMoviesHandler}
                     label="Search Movies"
                     value={query}
                     ></lightning-input>
-                </div> -->
+                </div>
                 <lightning-layout multiple-rows>
                     <template if:true={moviesData}>
                         <template for:each={moviesData} for:item="movie">
