--- a/force-app/main/default/lwc/movieListApp/movieListApp.html
+++ b/force-app/main/default/lwc/movieListApp/movieListApp.html
@@ -2,7 +2,7 @@
     <lightning-card>
         <div class="slds-p-around_medium">
             <div class="slds-p-around_medium">
-                <label class="headertext">Search Movies</label>
+                <label class="headertext">Search Popular Movies</label>
                 <lightning-input type="search"
                                  onchange={fetchMoviesHandler}
                                  variant="label-hidden"
