styling the tile list component

--- a/force-app/main/default/lwc/carFilter/carFilter.html
+++ b/force-app/main/default/lwc/carFilter/carFilter.html
@@ -1,7 +1,7 @@
 <template>
-    <lightning-card title="Filters" icon-name="standard:calibration">
+    <lightning-card title="Filter By" icon-name="standard:calibration">
         <div class="slds-m-horizontal_medium">
-            <lightning-input label="Search Key" type="search" value={filters.searchKey}
+            <lightning-input label="Search" type="search" value={filters.searchKey}
             onchange={handleSearchKeyChange}></lightning-input>
 
             <section class="slider_section">
