--- a/force-app/main/default/lwc/carTileList/carTileList.html
+++ b/force-app/main/default/lwc/carTileList/carTileList.html
@@ -1,6 +1,6 @@
 <template>
-    <lightning-card title="Car Tile List" icon-name="standard:account">
-        <div class="slds-p-horizontal_medium">
+    <lightning-card title="Cars Available" icon-name="standard:account">
+        <div class="slds-p-around_medium wrapper">
             <template if:true={cars}>
                 <div class="content">
                     <template for:each={cars} for:item="car">
