--- a/force-app/main/default/lwc/carTile/carTile.html
+++ b/force-app/main/default/lwc/carTile/carTile.html
@@ -1,12 +1,14 @@
 <template>
-    <div class="content">
-        <img src={car.Picture_URL__c} class="slds-align_absolute-center carImage" alt="Car Picture"/>
-        <div>
-            <p class="title slds-align_absolute-center">{car.Name}</p>
-            <p class="slds-align_absolute-center">
-                MSRP: <lightning-formatted-number format-style="currency" currency-code="USD" 
-                value={car.MSRP__c} class="price" maximum-fraction-digits="0"></lightning-formatted-number>
-            </p>
+    <div onclick={handleClick}>
+        <div class="content">
+            <img src={car.Picture_URL__c} class="slds-align_absolute-center carImage" alt="Car Picture"/>
+            <div>
+                <p class="title slds-align_absolute-center">{car.Name}</p>
+                <p class="slds-align_absolute-center">
+                    MSRP: <lightning-formatted-number format-style="currency" currency-code="USD" 
+                    value={car.MSRP__c} class="price" maximum-fraction-digits="0"></lightning-formatted-number>
+                </p>
+            </div>
         </div>
     </div>
 </template>
