building a placeholder utility component for when nothing or invalid search term is selected

--- a/force-app/main/default/lwc/carCard/carCard.html
+++ b/force-app/main/default/lwc/carCard/carCard.html
@@ -16,7 +16,7 @@
              </div>
         </template>
         <template if:false={recordId}>
-            <p>Select a Car to see details</p>
+            <c-placeholder message="Select a car to see details"></c-placeholder>
         </template> 
     </lightning-card>
 </template>
