--- a/force-app/main/default/lwc/carTileList/carTileList.html
+++ b/force-app/main/default/lwc/carTileList/carTileList.html
@@ -1,13 +1,16 @@
 <template>
     <lightning-card title="Cars Available" icon-name="standard:account">
         <div class="slds-p-around_medium wrapper">
-            <template if:true={cars}>
+            <template if:true={cars.length}>
                 <div class="content">
                     <template for:each={cars} for:item="car">
                         <c-car-tile key={car.Id} car={car} onselected={handleCarSelected}></c-car-tile>
                     </template>
                 </div>
             </template>
+            <template if:false={cars.length}>
+                <c-placeholder message="There are no cars matching your current selection"></c-placeholder>
+            </template> 
         </div>
     </lightning-card>
 </template>
