--- a/force-app/main/default/lwc/carCard/carCard.html
+++ b/force-app/main/default/lwc/carCard/carCard.html
@@ -1,9 +1,13 @@
 <template>
     <lightning-card title={carName} icon-name="standard:apex_plugin">
+
         <template if:true={recordId}>
-            <div class="slds-m-horizontal_medium">
+
+            <lightning-button-icon icon-name="utility:expand_alt" slot="actions" onclick={handleNavigateToRecord}></lightning-button-icon>
+
+            <div class="slds-m-horizontal_medium" onclick={handleNavigateToRecord}>
                 <img src={carPictureUrl} alt="Car Picture"/>
-                 <!-- Beacuse we don't want tit to be editable -->
+                 <!-- Because we don't want it to be editable -->
                  <lightning-record-view-form onload={handleRecordLoaded} record-id={recordId} object-api-name="Car__c" density="compact">
                      <lightning-output-field field-name={categoryField}></lightning-output-field>
                      <lightning-output-field field-name={makeField}></lightning-output-field>
@@ -15,6 +19,7 @@
                  </lightning-record-view-form>
              </div>
         </template>
+
         <template if:false={recordId}>
             <c-placeholder message="Select a car to see details"></c-placeholder>
         </template> 
