--- a/force-app/main/default/lwc/similarCars/similarCars.html
+++ b/force-app/main/default/lwc/similarCars/similarCars.html
@@ -4,6 +4,25 @@
             <div class="slds-align_absolute-center">
                 <lightning-button variant="destructive" label="Fetch Similar Cars" onclick={fetchSimilarCars}></lightning-button>
             </div>
+
+            <template if:true={similarCars}>
+                <template for:each={similarCars} for:item="car">
+                    <lightning-layout vertical-align="center" key={car.Id}>
+                        <lightning-layout-item>
+                            <img src={car.Picture_URL__c} alt="car picture" height="80px"/>
+                        </lightning-layout-item>
+                        <lightning-layout-item flexibility="grow" class="slds-p-horizontal_small">
+                           <p>{car.Name}</p> 
+                           <p>
+                                <lightning-formatted-number format-style="currency" currency-code="USD" value={car.MSRP__c} maximum-fraction-digits="0"></lightning-formatted-number>
+                           </p>
+                        </lightning-layout-item>
+                        <lightning-layout-item>
+                            <lightning-button  label="View Details" data-id={car.Id} onclick={handleViewDetailsClick}></lightning-button>
+                        </lightning-layout-item>
+                    </lightning-layout>
+                </template>
+            </template>
         </div>
     </lightning-card>
 </template>
